--- a/components/resume/work/RoleTimeline.module.css
+++ b/components/resume/work/RoleTimeline.module.css
@@ -1,10 +1,12 @@
 .timeline ul,
 .timeline li {
-  @apply list-none p-0;
+  @apply list-none p-0 pl-1;
 }
 
 .timeline li {
-  @apply pb-4 border-l pl-20 ml-2 mb-0 mt-0;
+  @apply pb-4 border-l pl-10 ml-2 mb-0 mt-0;
+
+  position: relative;
 }
 
 .timeline li:last-child {
@@ -12,7 +14,10 @@
 }
 
 .timeline li:before {
-  /*@apply bg-white border border-gray-400;*/
+  @apply bg-white border border-gray-400 rounded-full;
+
+  content: "";
+  position: absolute;
 
   width: 25px;
   height: 25px;
