* Adjusted the buy a coffee style for mobile devices * Added a dark mode for all pages * Adjusted overall styling a tiny bit

--- a/components/resume/work/RoleTimeline.module.css
+++ b/components/resume/work/RoleTimeline.module.css
@@ -24,6 +24,9 @@
   left: -13px;
   top: 0;
 }
+:global(.dark) .timeline li:before {
+  @apply bg-zinc-900 border-gray-300;
+}
 
 .timeline li h4 {
   @apply mt-0 mb-0;
