--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -3,7 +3,9 @@
   opacity: 0.7;
   background-image: radial-gradient(#b70a00 0.55px, transparent 0.55px), radial-gradient(#b70a00 0.55px, #ffe9d5 0.55px);
   background-size: 22px 22px;
-  background-position: 0 0, 11px 11px;
+  background-position:
+    0 0,
+    11px 11px;
 }
 
 .container {
